# agent-experiments

./: .gitignore  Makefile  README.md  pyproject.toml
ml_agent/: agent.py
ml_agent/eval_examples/: hello_world_eval_set_001.evalset.json  hello_world_eval_set_002.evalset.json
ml_agent/tools/: google_docs_tool.py
scripts/: start_prefect.sh
sow_agent/: agent.py
src/agents/doc_agent/: agent.py
src/agents/sow_agent/: agent.py
src/agents/sow_agent/tools/: google_docs_tool.py
src/agents/util_agent/: agent.py
src/workflows/: __init__.py  discover.py  pipeline.py  serve.py
tests/: test_google_docs_tool.py
