[project]
name = "agent-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Faggian",email = "nathan.faggian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk (>=1.8.0,<2.0.0)",
    "litellm (>=1.74.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
