[project]
name = "agent-experiments"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.8.0,<2.0.0",
    "litellm>=1.74.8,<2.0.0",
    "google-api-python-client>=2.177.0,<3.0.0",
    "google-auth-oauthlib>=1.2.2,<2.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
